fixtures/parser/invalid/statements_missing_semicolon.php
<?php
// invalid: consecutive expression statements are missing a semicolon
echo "missing"
echo "next";
